backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-reservation-service
  namespace: flight-reservation
  labels:
    app: flight-reservation-app
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: flight-reservation-app
